# rc_plane

./: .clang-format  .gitignore  APT_DEPENDENCIES.txt  APT_DEV_DEPENDENCIES.txt  ARDUINO_DEPENDENCIES.txt  CMakeLists.txt  DEPENDENCIES.txt  Doxyfile  LICENSE  README.md  TODO.md  builder.sh  config.json  full_build.sh  run_tests.sh
.github/workflows/: cmake.yml  codeql.yml  main.yml
common/: CMakeLists.txt
common/include/rcplane/common/: base_controller.hpp
common/include/rcplane/common/io/: config_manager.hpp  journal.hpp  journal_impl.hpp  packet.hpp  serial.hpp  serial_controller.hpp
common/include/rcplane/common/network/: http_controller.hpp  network_interface.hpp
common/src/io/: journal_impl.cpp  packet.cpp  serial.cpp  serial_controller.cpp
common/src/network/: http_controller.cpp
common/test/: CMakeLists.txt  journal_test.cpp  main.cpp  network__http_controller_test.cpp  packet_test.cpp  serial_controller_test.cpp
configs/: config.json  debug.json  fatal.json  invalid.json  invalid_json.json
configs/test/unit/: configManager.json  generalConfig.json  invalidJson.json  serialControllerRead.json  serialControllerWrite.json  serial_controller.json
configs/test/unit/config_manager/: error.json  info.json  test_config.json  warning.json
control_station/: AttitudeIndicator.hpp  CMakeLists.txt  ControlStation.cpp  ControlStation.hpp  HeadingIndicator.hpp  TelemetryThread.hpp  controlstation.ui  main.cpp
coverage/: coverage.base_controller.hpp.ef8f2c713b7d81cd5ee27e53f9f8c273.html  coverage.controller.cpp.3e0ee2ebfa6497211b9eab5291a9e45f.html  coverage.gps_controller.cpp.1d94ed0e7d969137d16531081937a268.html  coverage.html  coverage.http_controller.cpp.0f68e128ba15083ee0f7e2de7aaa9513.html  coverage.journal_impl.cpp.3e4d6de4833830b122717f1a31285c34.html  coverage.network_interface.hpp.7acddc55419e2eef1fafe484755e4c4c.html  coverage.packet.hpp.4da76c81b5b4bff44511c3d9a5723280.html  coverage.serial_controller.cpp.9bf23ae757cc980ee51309305aead737.html
flight_deck/: package-lock.json  package.json
flight_deck/src/: App.css  App.js
flight_deck/src/components/RCPlaneMap/: index.js
flight_deck/src/components/RCStateIndicator/: index.js  stateIndicator.css
impl/: CMakeLists.txt
impl/include/rcplane/: base_controller.hpp  fsm_base_controller.hpp
impl/include/rcplane/autopilot/: AutopilotManager.hpp  AutopilotUtility.hpp  IAutopilot.hpp  ManualAutopilot.hpp  StabilizeAutopilot.hpp  autopilot.hpp  autopilot_interface.hpp  autopilot_manager.hpp  autopilot_manual.hpp  autopilot_stabilize.hpp
impl/include/rcplane/common/: Helpers.hpp  Packet.hpp  State.hpp  packet.hpp  state.hpp
impl/include/rcplane/hw/: control_surface_manager.hpp  elevator_controller.hpp  imu_manager.hpp
impl/include/rcplane/io/: ConfigManager.hpp  Journal.hpp  SerialController.hpp  config_manager.hpp  journal.hpp  serial_controller.hpp
impl/include/rcplane/io/telemetry/: ITelemetryReceiver.hpp  ITelemetryTransmitter.hpp  TelemetryMessage.hpp  TelemetryReceiverMQ.hpp  TelemetryTransmitterMQ.hpp
impl/include/rcplane/som/: SomController.hpp
impl/src/: CMakeLists.txt
impl/src/autopilot/: AutopilotManager.cpp  AutopilotUtility.cpp  ManualAutopilot.cpp  StabilizeAutopilot.cpp  autopilot_interface.cpp  autopilot_manager.cpp  autopilot_manual.cpp  autopilot_stabilize.cpp
impl/src/hw/: control_surface_manager.cpp  imu_manager.cpp
impl/src/io/: CMakeLists.txt  ConfigManager.cpp  SerialController.cpp  config_manager.cpp  serial_controller.cpp
impl/src/io/telemetry/: TelemetryMessage.cpp  TelemetryReceiverMQ.cpp  TelemetryTransmitterMQ.cpp
impl/src/mcu/: mcu.ino
impl/src/pc/: main.cpp
impl/src/som/: CMakeLists.txt  SomController.cpp  main.cpp  telemetry_rx.cpp
impl/test/: CMakeLists.txt  PacketTestUtils.hpp  main.cpp
impl/test/integration/: SomControllerTest.cpp
impl/test/mock/: config_manager_mock.hpp  serial_controller_mock.hpp
impl/test/unit/: AutopilotManagerTest.cpp  ConfigManagerTest.cpp  ManualAutopilotTest.cpp  SerialControllerTest.cpp  StabilizeAutopilotTest.cpp  TelemetryMQTest.cpp  config_manager_test.cpp  packet_test.cpp  serial_controller_test.cpp
logs/: gps.nmea  log_viewer.py  simulation.py
mcu/: mcu.ino
mcu/lib/: .mcu_manager.hpp.swp  aileron.hpp  controller.hpp  elevator.hpp  flag.hpp  led_controller.hpp  logger.hpp  mcu_manager.hpp  motor.hpp  pins.hpp  rudder.hpp  servo.hpp  states.hpp  wing_led.hpp
mcu/lib/controllers/: aileron.hpp  elevator.hpp  flight_switch.hpp  imu.hpp  motor.hpp  rudder.hpp  test_switch.hpp
mcu/lib/interface/: controller.hpp  led_controller.hpp  servo.hpp  switch_controller.hpp
mcu/lib/leds/: power_led.hpp  wing_led.hpp
pc/: CMakeLists.txt
pc/src/: flight_deck.cpp
puml/: control_flow.puml  mcu_control_flow.puml  mcu_som_communication.puml  som.puml  som_class_diagram.puml
resources/: control_flow.drawio  controller.drawio  fsm.drawio  mcu_uml.drawio  packet.drawio  plane.drawio  schematic.drawio  sequence_diagram.drawio  som_class_diagram.drawio  som_uml.drawio  uml.drawio
scripts/: compile-mcu.sh  compile-pc.sh  compile-som.sh  flash-mcu.sh  flash-som.sh  install-dependencies.sh  read-serial-mcu.sh  run-flight-deck.sh  run-pc.sh  run-simulator.sh  run-som.sh  run-tests.sh  run_tests.sh
som/: CMakeLists.txt
som/include/rcplane/som/position/: gps_controller.hpp
som/src/: controller.cpp  simulator.cpp
som/src/position/: gps_controller.cpp
utils/: log_viewer.py  simulation.py
